@@ -43,6 +43,7 @@
     <!-- used by POI, PDFBox and Jackcess ...try to sync -->
     <bouncycastle.version>1.54</bouncycastle.version>
     <commons.exec>1.3</commons.exec>
+    <mime4j.version>0.7.2</mime4j.version>
   </properties>
 
   <modules>
